--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "node": ">=6.9.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "nodemon": "^1.12.1"
   }
 }
